<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:id="@+id/main_model">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/introduction"
                android:text="@string/textview"
                android:layout_gravity="start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/config_icon"
                android:layout_weight="1"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:src="@drawable/img0"/>

        </LinearLayout>

    <EditText
        android:id="@+id/user_input"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tip"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/feedback"
            android:layout_weight="10"
            android:text="@string/tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button_submit"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"

            android:textSize="20sp"
            android:text="@string/button_submit"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button_Logout"
            android:text="@string/button_logout"
            android:layout_width="90dp"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/button_level"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="start"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:textSize="20sp"
            android:text="@string/button_level"/>


        <Button
            android:id="@+id/button_score"
            android:text="@string/button_score"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="end"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:textSize="20sp"/>

    <Button
        android:id="@+id/button_quit"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="end"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="00dp"
        android:text="@string/button_quit"
        android:textSize="20sp"/>



        
        </LinearLayout>

</LinearLayout>
